IP link file added

--- a/intof/templates/menu.html
+++ b/intof/templates/menu.html
@@ -16,6 +16,7 @@
 
         <tr><td style="color:green"><b>All Devices</b></td></tr> 
         <tr><td><a href="/get/devices">/get/devices</a></td><td>List all device ids</td></tr>
+        <tr><td><a href="/links">/links</a></td><td>List all device IP addresses</td></tr>
         <tr><td><a href="/get/active/devices">/get/active/devices</a></td><td>Get active (enabled) device ids</td></tr>         
         <tr><td><a href="/get/inactive/devices">/get/inactive/devices</a></td><td>Get inactive (disabled) device ids</td></tr>        
         <tr><td><a href="/dump/device/tree">/dump/device/tree</a></td><td>Dump all devices' Config and relsen objects</td></tr>
